# create-rust-app

./: .gitignore  404.html  CNAME  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md  index.html  sitemap.xml
crates/create-rust-app_cli/: Cargo.toml
crates/create-rust-app_cli/src/content/: cargo_toml.rs  mod.rs  model.rs  project.rs
crates/create-rust-app_cli/src/plugins/: dev.rs  graphql.rs  tasks.rs
crates/create-rust-app_cli/template/: .gitignore  build.rs
crates/create-rust-app_cli/template-plugin-auth/frontend/tests/: authentication.spec.ts
crates/create-rust-app_cli/template-plugin-container/: .dockerignore  Dockerfile
crates/create-rust-app_cli/template-plugin-dev/.cargo/admin/: .proxyrc
crates/create-rust-app_cli/template-plugin-dev/frontend/src/: setupDevelopment.tsx
crates/create-rust-app_cli/template-plugin-graphql/.cargo/: graphql-playground.html
crates/create-rust-app_cli/template-plugin-graphql/backend/graphql/: mod.rs+actix_web  mod.rs+poem  query.rs
crates/create-rust-app_cli/template-plugin-storage/backend/services/: file.rs+actix_web  file.rs+poem
crates/create-rust-app_cli/template-plugin-tasks/backend/tasks/: daily_todo.rs  daily_todo_async.rs
crates/create-rust-app_cli/template/.cargo/: config.toml
crates/create-rust-app_cli/template/backend/: main.rs+poem
crates/create-rust-app_cli/template/backend/services/: todo.rs+actix_web  todo.rs+poem
crates/create-rust-app_cli/template/backend/views/: index.html
crates/create-rust-app_cli/template/frontend/: tsconfig.json
crates/create-rust-app_cli/template/frontend/src/: App.tsx
crates/create-rust-app_cli/template/migrations/00000000000002_todos/: down.sql+database_sqlite  up.sql+database_postgres  up.sql+database_sqlite
create-rust-app/: Cargo.toml  plugin-auth.d.ts  plugin-dev.d.ts  tsync.sh
create-rust-app/src/: database.rs  lib.rs  logger.rs  mailer.rs  schema.rs
create-rust-app/src/auth/: controller.rs  endpoints_actixweb.rs  endpoints_poem.rs  extractor.rs  extractor_actixweb.rs  extractor_poem.rs  mod.rs  schema.rs  user.rs  user_session.rs
create-rust-app/src/auth/endpoints/: mod.rs  service_actixweb.rs  service_poem.rs
create-rust-app/src/auth/extractors/: auth.rs  auth_actixweb.rs  auth_poem.rs  mod.rs
create-rust-app/src/auth/mail/: auth_activated.rs  auth_password_changed.rs  auth_password_reset.rs  auth_recover_existent_account.rs  auth_recover_nonexistent_account.rs  auth_register.rs
create-rust-app/src/auth/oidc/: controller.rs  mod.rs  model.rs
create-rust-app/src/auth/oidc/schema/: sqlite.rs
create-rust-app/src/auth/permissions/: mod.rs  role_permission.rs  user_permission.rs  user_role.rs
create-rust-app/src/auth/schema/: sqlite.rs
create-rust-app/src/database/: mod.rs
create-rust-app/src/dev/: backend_compiling_server.rs  controller.rs  dev_server.rs  endpoints_actixweb.rs  endpoints_poem.rs  frontend_dev_server.rs  mod.rs
create-rust-app/src/dev/endpoints/: mod.rs  service_actixweb.rs  service_poem.rs
create-rust-app/src/storage/: attachment.rs  attachment_blob.rs  mod.rs  schema.rs
create-rust-app/src/tasks/: mod.rs
create-rust-app/src/util/: actix_web_utils.rs  mod.rs  net.rs  poem_utils.rs  template_utils.rs  workspace_utils.rs
create-rust-app_cli/: Cargo.toml
create-rust-app_cli/qsync/: Cargo.toml  README.md
create-rust-app_cli/qsync/qsync-macro/src/: lib.rs
create-rust-app_cli/qsync/src/: hook.rs  lib.rs  params.rs  processor.rs  utils.rs
create-rust-app_cli/src/: main.rs
create-rust-app_cli/src/content/: cargo_toml.rs  migration.rs  mod.rs  model.rs  project.rs  service.rs
create-rust-app_cli/src/plugins/: auth.rs  auth_oidc.rs  container.rs  dev.rs  graphql.rs  mod.rs  storage.rs  tasks.rs  utoipa.rs
create-rust-app_cli/src/qsync/: hook.rs  lib.rs  mod.rs  params.rs  processor.rs
create-rust-app_cli/src/utils/: fs.rs  git.rs  logger.rs  mod.rs
create-rust-app_cli/template/: .env.example  .gitignore  CONFIG.md  README.md  build.rs
create-rust-app_cli/template-plugin-auth/frontend/src/containers/: AccountPage.tsx  ActivationPage.tsx  (+2 more)
create-rust-app_cli/template-plugin-container/: .dockerignore  Dockerfile
create-rust-app_cli/template-plugin-dev/.cargo/admin/: .gitignore  README.md  babel.config.js  package.json  tailwind.config.js  tsconfig.json
create-rust-app_cli/template-plugin-dev/frontend/src/: setupDevelopment.tsx
create-rust-app_cli/template-plugin-graphql/.cargo/: graphql-playground.html
create-rust-app_cli/template-plugin-graphql/backend/graphql/: mod.rs+actix_web  mod.rs+poem  mutation.rs  subscription.rs
create-rust-app_cli/template-plugin-redis/backend/redis_todos/: mod.rs  todos.rs
create-rust-app_cli/template-plugin-redis/frontend/containers/: Todo.tsx
create-rust-app_cli/template-plugin-storage/backend/services/: file.rs+actix_web  file.rs+poem
create-rust-app_cli/template-plugin-tasks/backend/: async_queue.rs  queue.rs
create-rust-app_cli/template-plugin-tasks/backend/tasks/: DailyTodo.rs  daily_todo.rs  daily_todo_async.rs  mod.rs
create-rust-app_cli/template/.cargo/: config
create-rust-app_cli/template/backend/: main.rs  main.rs+actix_web  main.rs+poem
create-rust-app_cli/template/backend/mail/: example.rs
create-rust-app_cli/template/backend/models/: mod.rs  todo.rs  todo.rs+database_postgres  todo.rs+database_sqlite
create-rust-app_cli/template/backend/services/: todo.rs+actix_web  todo.rs+poem
create-rust-app_cli/template/backend/views/: index.html
create-rust-app_cli/template/frontend/: .env.example  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
create-rust-app_cli/template/frontend/bundles/: index.tsx
create-rust-app_cli/template/frontend/public/: pwa.json
create-rust-app_cli/template/frontend/src/: App.css  App.tsx  dev.tsx  main.tsx
create-rust-app_cli/template/migrations/00000000000000_diesel_initial_setup/: down.sql+database_postgres  up.sql+database_postgres
create-rust-app_cli/template/migrations/00000000000002_todos/: down.sql+database_postgres  up.sql+database_postgres  up.sql+database_sqlite
(+257 files in other folders)
