[package]
name = "create-rust-app"
version = "0.1.0"
authors = ["Haris <4259838+Wulf@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/Wulf/create-rust-app"
license = "MIT OR Apache-2.0"
keywords = ["react", "backend", "typescript", "generation", "fullstack", "rest", "api"]
categories = ["command-line-utilities", "development-tools", "web-programming", "config", "database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
