[package]
name = "create-rust-app"
description = "Set up a modern rust+react web app by running one command."
version = "1.0.1"
authors = ["Haris <4259838+Wulf@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/Wulf/create-rust-app"
license = "MIT OR Apache-2.0"
keywords = ["react", "typescript", "generation", "backend", "frontend"]
categories = ["command-line-utilities", "development-tools", "web-programming", "config", "database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
anyhow = "1.0.40"
console = "0.14.1"
dialoguer = "0.8.0"
indoc = "1.0.3"
rust-embed = "5.9.0"
structopt = "0.3.21"
toml = "0.5.8"
