[package]
name = "create-rust-app"
description = "Set up a modern rust+react web app by running one command."
version = "8.1.1"
edition = "2018"
authors = ["Haris <4259838+Wulf@users.noreply.github.com>"]
readme = "../README.md"
repository = "https://github.com/Wulf/create-rust-app"
license = "MIT OR Apache-2.0"
keywords = ["react", "typescript", "generation", "backend", "frontend"]
categories = ["command-line-utilities", "development-tools", "web-programming", "config", "database"]

[dependencies]
##
## COMMON / DEFAULT - required dependencies
##
dotenv = "0.15.0"
serde_json = "1.0.83"
lettre = "0.10.1"
tera = { version="1.17.0" }
lazy_static = { version="1.4.0" }
serde = { version = "1.0.152", features = ["derive"] }
diesel = { version="2.0.0-rc.1", default-features = false, features = ["uuid", "r2d2", "chrono", "returning_clauses_for_sqlite_3_35"] } # plugin_dev, plugin_auth

##
## Database
##

# sqlite dependencies
libsqlite3-sys = { version = "0.25", optional = true, features = ["bundled"] }

##
## PLUGINS
##

# plugin_auth
rust-argon2 = { optional=true, version="1.0" }
rand = { optional=true, version="0.8.5" }
jsonwebtoken = { optional=true, version="7.2.0" }
tsync = { optional=true, version="1.3.0" }
chrono = { optional=true, version = "0.4.23", features = ["serde"] }

# plugin_dev
diesel_migrations = { optional=true, version="2.0.0" }

# plugin_storage
aws-config = { optional=true, version="0.8.0" }
aws-types = { optional=true, version="0.8.0" }
aws-endpoint = { optional=true, version="0.14.0" }
aws-sdk-s3 = { optional=true, version="0.8.0" }
futures-util = { optional=true, version="0.3.25" }
http = { optional=true, version="0.2.6" }
diesel_derives = { optional=true, version="1.4.1" }
uuid = { optional=true, version="1.2.2", features=["v4", "serde"] }
md5 = { optional=true, version="0.7.0" }
base64 = { optional=true, version="0.13.0" }

##
## BACKENDS
##

# poem dependencies
poem = { optional=true, version="1.3.52", features=["anyhow", "cookie", "static-files"] }

# actix_web dependencies
actix-multipart = { optional=true, version="0.4.0" }
actix-files = { optional=true, version="0.6.2" }
actix-http = { optional=true, version="3.0.4" }
actix-web = { optional=true, version="4.2.1" }
actix-web-httpauth = { optional=true, version="0.8.0" }
derive_more = { optional=true, version="0.99.17" }
futures = { optional=true, version="0.3.21" }
env_logger = { optional=true, version= "0.9.0" }
##
## MISC - here, we list deps which are required by multiple features but are not required in all configurations
##

mime_guess = { optional=true, version="2.0.4" } # backend_poem, plugin_storage
anyhow = { optional=true, version="1.0.57" } # backend_poem, plugin_auth
tokio = { optional=true, version = "1", features = ["full"] } # backend_poem, plugin-storage

[features]
default = ["backend_actix-web", "database_postgres", "plugin_auth", "plugin_container", "plugin_dev", "plugin_graphql", "plugin_storage"]
plugin_dev = ["diesel_migrations"]
plugin_container = []
plugin_auth = ["anyhow", "rust-argon2", "rand", "jsonwebtoken", "chrono", "tsync"]
plugin_storage = [ "aws-config", "aws-types", "aws-endpoint", "aws-sdk-s3", "tokio", "futures-util", "http", "diesel_derives", "uuid", "md5", "mime_guess", "base64" ]
plugin_graphql = []
backend_poem = ["poem", "anyhow", "mime_guess", "tokio"]
backend_actix-web = ["actix-web", "actix-http", "actix-files", "actix-multipart", "actix-web-httpauth","derive_more", "futures", "env_logger"]
database_sqlite = ["diesel/sqlite", "libsqlite3-sys/bundled"]
database_postgres = ["diesel/postgres"]
