[package]
name = "create-rust-app_cli"
description = "Set up a modern rust+react web app by running one command."
version = "9.2.0"
authors = ["Haris <4259838+Wulf@users.noreply.github.com>"]
edition = "2018"
readme = "../README.md"
repository = "https://github.com/Wulf/create-rust-app"
license = "MIT OR Apache-2.0"
keywords = ["react", "typescript", "generation", "backend", "frontend"]
categories = ["command-line-utilities", "development-tools", "web-programming", "config", "database"]
default-run = "create-rust-app"

[dependencies]
Inflector = "0.11.4"
anyhow = "1.0.68"
console = "0.15.5"
dialoguer = "0.10.3"
indoc = "1.0.8"
walkdir = "2.3.2"
rust-embed = "6.4.2"
clap = {version = "4.1", features = ["wrap_help", "derive", "cargo"]}
toml = "0.5.11"
tsync = "1"
update-informer = "0.6.0"
qsync = { version="0.1.0" }

[[bin]]
name = "create-rust-app"
path = "src/main.rs"
