[package]
name = "create-rust-app_cli"
description = "Set up a modern rust+react web app by running one command."
version = "9.3.2"
authors = ["Haris <4259838+Wulf@users.noreply.github.com>"]
edition = "2018"
readme = "../README.md"
repository = "https://github.com/Wulf/create-rust-app"
license = "MIT OR Apache-2.0"
keywords = ["react", "typescript", "generation", "backend", "frontend"]
categories = [
  "command-line-utilities",
  "development-tools",
  "web-programming",
  "config",
  "database",
]
default-run = "create-rust-app"

[dependencies]
Inflector = "0.11.4"
anyhow = "1.0.71"
console = "0.15.7"
dialoguer = "0.10.4"
indoc = "2.0.1"
walkdir = "2.3.3"
rust-embed = { version = "6.6.1", features = ["debug-embed"] }
clap = { version = "4.3", features = ["wrap_help", "derive", "cargo"] }
toml = "0.7.4"
# tsync = "1"
update-informer = "1.0.0"
qsync = { version = "0.1" }

[[bin]]
name = "create-rust-app"
path = "src/main.rs"
