[package]
name = "create-rust-app_cli"
description = "Set up a modern rust+react web app by running one command."
version = "11.0.0"
authors = ["Haris <4259838+Wulf@users.noreply.github.com>"]
edition = "2018"
readme = "../README.md"
repository = "https://github.com/Wulf/create-rust-app"
license = "MIT OR Apache-2.0"
keywords = ["react", "typescript", "generation", "backend", "frontend"]
categories = [
  "command-line-utilities",
  "development-tools",
  "web-programming",
  "config",
  "database",
]
default-run = "create-rust-app"

[dependencies]
Inflector = "0.11"
anyhow = "1"
console = "0.15.8"
dialoguer = "0.11.0"
indoc = "2.0"
walkdir = "2.5"
rust-embed = { version = "8.3", features = ["debug-embed"] }
clap = { version = "4.5", features = ["wrap_help", "derive", "cargo"] }
toml = "0.7.8"
# tsync = "1"
update-informer = "1.1"
qsync = { version = "1.0.1" }

[[bin]]
name = "create-rust-app"
path = "src/main.rs"
