[package]
name = "create-rust-app_cli"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
default-run = "create-rust-app"

[dependencies]
Inflector = "0.11"
anyhow = "1"
console = "0.15.8"
dialoguer = "0.11.0"
indoc = "2.0"
walkdir = "2.5"
rust-embed = { version = "8.3", features = ["debug-embed"] }
clap = { version = "4.5", features = ["wrap_help", "derive", "cargo"] }
toml = "0.7.8"
update-informer = "1.1"
qsync = { version = "1.0.1" }

[[bin]]
name = "create-rust-app"
path = "src/main.rs"
