[package]
name = "qsync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
regex = "1.7.1"
syn = { version = "1.0.75", features = ["full", "extra-traits", "parsing"] }
walkdir = "2.3.2"
qsync-macro = { path = "./qsync-macro" }
darling = "0.14.3"
proc-macro2 = "1.0.51"

[lib]
name = "qsync"
path = "src/lib.rs"
