[package]
name = "qsync"
version = "0.1.1"
edition = "2021"
description = "Generate react-query hooks for your rust backend (see https://github.com/Wulf/create-rust-app)"
license = "MIT OR Apache-2.0"

[dependencies]
Inflector = "0.11.4"
regex = "1.7.1"
syn = { version = "1.0.75", features = ["full", "extra-traits", "parsing"] }
walkdir = "2.3.2"
qsync-macro = { version="0.1.0" }
darling = "0.14.3"
proc-macro2 = "1.0.51"

[lib]
name = "qsync"
path = "src/lib.rs"
